# DNN_SW_Code

./: README.md
Driver/: adder.c  cnn.c  cnn.ko  test.c  test.ko
Info_Gen/: info_gen.cpp  info_gen.hpp  main.cpp
Parse/: merge.json  model_yolo256.json  parse.cpp  parse.hpp  parse_main.cpp
ZCU102_V2/: CMakeLists.txt  app.cpp  ctrl_ip.hpp  general.cpp  inst.cpp  inst.hpp  pre_image.cpp  pre_image.hpp
Zedboard_V1/: CMakeLists.txt  Output_Offset.txt  app.cpp  ctrl_ip.cpp  general.cpp  general.hpp  inst.cpp  pre_image.cpp  pre_image.hpp
mult_thread/: test_muil_t.cpp
